syntax = "proto3";

option java_package = "tornaco.apps.shortx.core.proto.rule";
option java_outer_classname = "OuterRules";
option java_multiple_files = true;

import "google/protobuf/any.proto";
import "shortx/Common.proto";
import "shortx/Conditions.proto";
import "shortx/Functions.proto";

message RuleSet {
  string id = 1;
  string title = 2;
  string description = 3;
  string icon = 4;
  int64 lastUpdateTime = 5;
  int64 createTime = 6;

  RuleList ruleList = 7;
}

message RuleSetList {
  repeated RuleSet ruleSet = 1;
}

message Rule {
  repeated google.protobuf.Any facts = 1;
  repeated google.protobuf.Any conditions = 2;
  repeated google.protobuf.Any actions = 3;

  string id = 4;
  int32 priority = 5;
  int64 lastUpdateTime = 6;
  int64 createTime = 7;

  Author author = 8;

  string title = 9;
  string description = 10;

  bool isEnabled = 11;

  ConditionOperator condOp = 12;
  ConditionOperatorPayload condOpPayload = 13;

  RuleHook hook = 14;
  RuleQuit quit = 15;

  AsyncMode asyncMode = 16;

  int64 versionCode = 17;
  ConflictStrategy conflictPolicy = 18;
  // Put some extras for ext
  // Currently extras:
  // 1. VT-PKG
  repeated StringPair extras = 19;

  string ruleSetId = 20;

  // Geeks options
  google.protobuf.Any ruleInstanceIdGenerator = 21;

  repeated FuncParameter parameters = 22;
}

message RuleInstanceIdGenerator_Static {
  string insId = 1;
}

message RuleInstanceIdGenerator_String {
  string insId = 1;
}

message RuleInstanceIdGenerator_MVEL {
  string expression = 1;
}

message RuleInstanceIdGenerator_JS {
  string expression = 1;
}

message RuleHook {
  repeated google.protobuf.Any actionsOnEnabled = 1;
  repeated google.protobuf.Any actionsOnDisabled = 2;
  repeated google.protobuf.Any actionsOnDeleted = 3;
}

message RuleQuit {
  repeated google.protobuf.Any facts = 1;
  repeated google.protobuf.Any conditions = 2;
  bool isEnabled = 3;
  ConditionOperator condOp = 4;
  ConditionOperatorPayload condOpPayload = 5;
  repeated google.protobuf.Any actions = 6;
}

message RuleList {
  repeated Rule rules = 1;
}

message ActionEvaluateRecord {
  google.protobuf.Any action = 1;
  bool isSuccess = 2;
  string message = 3;
  int64 timeStamp = 4;

  EvaluateContext context = 6;
  string actionId = 7;
}

message ConditionEvaluateRecord {
  google.protobuf.Any condition = 1;
  bool isSuccess = 2;
  bool isMatch = 3;
  string message = 4;
  int64 timeStamp = 5;

  EvaluateContext context = 6;
}

message FactPublishRecord {
  google.protobuf.Any fact = 1;
  int64 timeStamp = 2;
}

message EvaluateContext {
  // The Rule or DA id.
  string srcId = 1;
  string srcTitle = 2;
  // Unique number by execute sequence.
  int32 serialNumber = 3;
  ContextSrcEvent srcEvent = 8;
}

enum ContextSrcEvent {
  ContextSrc_DirectAction = 0;
  ContextSrc_ExecuteOnDAEditor = 1;
  ContextSrc_ExecuteOnOverlay = 2;
  ContextSrc_ExecuteRuleActions = 3;
  ContextSrc_Rule = 4;
  ContextSrc_RuleHook = 5;
  ContextSrc_RuleQuit = 6;
}

enum AsyncMode {
  AsyncMode_Async = 0;
  AsyncMode_Sync = 1;
  AsyncMode_Sync_InRule = 2;
}